--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
+
 <head>
-<title>Beschreibung der Seite</title>
-</head>
-<body>
-<head>
-   <title>JAKO-O Online Shop - Kindermode, Babymode, Spielzeug und Kindermöbel</title>
+    <title>JAKO-O Online Shop - Kindermode, Babymode, Spielzeug und Kindermöbel</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <link rel="stylesheet" href="css/idangerous.swiper.css">          <!-- SWIPER CSS -->
-    <meta name="description" content="JAKO-O Online-Shop: Kindermode, Babymode, Spielzeug und Kindermöbel - Kindersachen mit Köpfchen! ★ Tolle Produkte für Kinder ★ Top Qualität"/>
-    <style type="text/css">@import "css/foundation.css";</style>
-    <style type="text/css">@import "css/normalize.css";</style>
-    <style type="text/css">@import "css/mobile.css";</style>
+    <link rel="stylesheet" href="css/idangerous.swiper.css">
+    <!-- SWIPER CSS -->
+    <meta name="description" content="JAKO-O Online-Shop: Kindermode, Babymode, Spielzeug und Kindermöbel - Kindersachen mit Köpfchen! ★ Tolle Produkte für Kinder ★ Top Qualität" />
+    <style type="text/css">
+    @import"css/foundation.css";
+    </style>
+    <style type="text/css">
+    @import"css/normalize.css";
+    </style>
+    <style type="text/css">
+    @import"css/mobile.css";
+    </style>
 </head>
 <!--[if IE 7]>
 <body class="ie7 ieFix noJS ">
@@ -26,33 +29,355 @@
 <![endif]-->
 <!--[if (gt IE 8)|!(IE)]>
     <!-->
+
 <body class="noJS ">
-<!--<![endif]-->
+    <!--<![endif]-->
 
-<div class="siteWrapper">       
-    <section id="mainnav">
-        <nav>
-            <h2 class="modul-h1">&Uuml;bersicht:</h2>
-            <ul class="level1">
-                <li><a href="startseite.html"><span class="menuarrow">Startseite</span></a></li>
-                <li><a href="pds.html"><span class="menuarrow">Produktdetailseite</span></a></li>
-                <li><a href="warenkorb.html"><span class="menuarrow">Warenkorb</span></a></li>
-                <li><a href="merkzettel.html"><span class="menuarrow">Merkzettel</span></a></li>
-                <li><a href="pue.html"><span class="menuarrow">Produktübersichtsseite</span></a></li>
-                <li><a href="sue.html"><span class="menuarrow">Suchübersichtsseite</span></a></li>
-                <li><a href="w1-01-login.html"><span class="menuarrow">W1-01 -Login</span></a></li>
-                <li><a href="w1-02-eingeloggt.html"><span class="menuarrow">W1- 02 - eingeloggt</span></a></li>
-                <li><a href="w1-03-abweichende_lieferadresse.html"><span class="menuarrow">W1- 03 - abweichende Lieferadresse</span></a></li>
-                <li><a href="w1-04-hermes.html"><span class="menuarrow">W1 - 04 - Hermes</span></a></li>
-                <li><a href="w2-zahlungsart.html"><span class="menuarrow">W2 Zahlungsart</span></a></li>
-                <li><a href="w3_bestellung_abschicken.html"><span class="menuarrow">W3 Bestellung abschicken</span></a></li>
+    <div class="siteWrapper home">
+        <header>
+            <h1>
+                <a href="index.html">
+                    <img src="img/logo.png" itemprop="logo" />
+                    <span class="hide">JAKO-O Online-Shop</span>
+                </a>
+            </h1>
+            <nav id="menuicons">
+                <ul>
+                    <li>
+                        <a id="menubutton" href="#mainnav" class="nav icon-start">
+                            <span class="hide">Hauptmenü</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a id="icon-suche" href="#inputsuche" class="nav icon-suche">
+                            <span class="hide">Suche</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="merkzettel.html" class="nav icon-merkzettel">
+                            <span class="hide">Merkzettel</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="warenkorb.html" class="nav icon-warenkorb">
+                            <span class="hide">Warenkorb</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="suche">
+            <input id="inputsuche" type="search" name="search" placeholder="Was möchten Sie finden?">
+        </section>
+        <section class="homeSlider">
+            <div class="swiper-container cf">
+                <div class="swiper-wrapper cf">
+                    <div class="swiper-slide">
+                        <a href="pds.html">
+                            <img src="http://www.jako-o.de/medias/sys_master/h27/h5a/8824766562334.jpg" width="800" height="270">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="pds.html">
+                            <img src="http://www.jako-o.de/medias/sys_master/hbb/h06/8824066768926.jpg" width="800" height="270">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="pds.html">
+                            <img src="http://www.jako-o.de/medias/sys_master/hbb/h06/8824066768926.jpg" width="800" height="270">
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="pds.html">
+                            <img src="http://www.jako-o.de/medias/sys_master/hbb/h06/8824066768926.jpg" width="800" height="270">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="pagination"></div>
+        </section>
+        <section id="mainnav">
+            <nav>
+                <h2 class="modul-h1">Alle Kategorien:</h2>
+                <ul class="level1">
+                    <li>
+                        <span class="menuarrow">Kindermode</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">JAKO-O Mädchen Gr. 92-158</a>
+                            </li>
+                            <li><a href="pue.html">JAKO-O Jungen Gr. 92-158</a>
+                            </li>
+                            <li><a href="pue.html">FIT-Z Mädchen Gr. 140-182</a>
+                            </li>
+                            <li><a href="pue.html">FIT-Z Jungen Gr. 140-182</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Spielzeug</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Spielzeug</a>
+                            </li>
+                            <li><a href="pue.html">Spiele</a>
+                            </li>
+                            <li><a href="pue.html">Spielzeug für Draußen</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Baby</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Baby-Mode ab Gr. 56/62</a>
+                            </li>
+                            <li><a href="pue.html">Baby-Spielzeug</a>
+                            </li>
+                            <li><a href="pue.html">Praktisches fürs Baby</a>
+                            </li>
+                            <li><a href="pue.html">Schwangerschaftsmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Sport & Bewegung</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Sportgeräte</a>
+                            </li>
+                            <li><a href="pue.html">Kinder-Fahrzeuge</a>
+                            </li>
+                            <li><a href="pue.html">Sportarten</a>
+                            </li>
+                            <li><a href="pue.html">Sportmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Kinderzimmer</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Kinder-Möbel</a>
+                            </li>
+                            <li><a href="pue.html">Möbelserien</a>
+                            </li>
+                            <li><a href="pue.html">Heimtextil</a>
+                            </li>
+                            <li><a href="pue.html">Deko & Accessoires</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Kinderfest</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Partyartikel</a>
+                            </li>
+                            <li><a href="pue.html">Themenpartys</a>
+                            </li>
+                            <li><a href="pue.html">Partybeschäftigung</a>
+                            </li>
+                            <li><a href="pue.html">Mitgebsel</a>
+                            </li>
+                            <li><a href="pue.html">personalisierte Geschenke</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Praktisches</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Haushalt</a>
+                            </li>
+                            <li><a href="pue.html">Familie unterwegs</a>
+                            </li>
+                            <li><a href="pue.html">Schulorganisation</a>
+                            </li>
+                            <li><a href="pue.html">Garten & Strand</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Basteln</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Saisonales Basteln</a>
+                            </li>
+                            <li><a href="pue.html">Bastelwerkzeug & mehr</a>
+                            </li>
+                            <li><a href="pue.html">Bastelbedarf</a>
+                            </li>
+                            <li><a href="pue.html">Bastelsets nach Schwierigkeitsgrad</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">Medien</span>
+                        <ul class="level2">
+                            <li><a href="pue.html">Unterhaltungsbücher</a>
+                            </li>
+                            <li><a href="pue.html">Sachbücher</a>
+                            </li>
+                            <li><a href="pue.html">Lernmaterialien</a>
+                            </li>
+                            <li><a href="pue.html">CDs, DVDs & Multimedia</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="menuarrow">% SALE %</span>
+                         <ul class="level2">
+                            <li><a href="pue.html">Kindermode</a>
+                            </li>
+                            <li><a href="pue.html">Spielzeug & Praktisches</a>
+                            </li>
+                            <li><a href="pue.html">Baby</a>
+                            </li>
+                            <li><a href="pue.html">HABA Outlet</a>
+                            </li>
+                            <li><a href="pue.html">Schwangerschaftsmode</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+        <section class="homeSlider2">
+            <h2>Unsere Bestseller</h2>
+            <div class="swiper-container1 swiper-container2 cf">
+                <div class="swiper-wrapper cf">
+                    <div class="swiper-slide">
+                        <div class="bestseller-box">
+                            <a href="pds.html">
+                                <img src="http://www.jako-o.de/medias/sys_master/8800025640990.jpg" alt="" width="200">
+                                <p>
+                                    <strong>1. Kinder-Shirt Fotodruck</strong>
+                                </p>
+                                <strike>140,00 €</strike>
+                                <div class="price txt-red">123,32 €</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="bestseller-box">
+                            <a href="pds.html">
+                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <p>
+                                    <strong>Kinder-Shirt</strong>
+                                </p>
+                                <div class="price">23,32 €</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="bestseller-box">
+                            <a href="pds.html">
+                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <p>
+                                    <strong>Kinder-Shirt Fotodruck ohne Grundpreis</strong>
+                                </p>
+                                <strike>140,00 €</strike>
+                                <div class="price txt-red">123,32 €</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="bestseller-box">
+                            <a href="pds.html">
+                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <p>
+                                    <strong>Kinder-Shirt Fotodruck mit Grundpreis</strong>
+                                </p>
+                                <strike>999,00 €</strike>
+                                <div class="price txt-red">123,32 €</div>
+                                <div>
+                                    <small>1,98 € / 100 g</small>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="bestseller-box">
+                            <a href="pds.html">
+                                <img src="media/8800019808286.jpg" alt="" width="200">
+                                <p>
+                                    <strong>Kinder-Shirt Fotodruck</strong>
+                                </p>
+                                <strike>140,00 €</strike>
+                                <div class="price txt-red">123,32 €</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pagination"></div>
+        </section>
+        <footer id="footer">
+            <div id="to-top"><a href="#" title="Zum Seitenanfang">Zum Seitenanfang</a>
+            </div>
+            <div class="footer-wrapper">
+                <h2>Service:</h2>
+                <p>Bereits Kunde? <a href="#">Hier anmelden &raquo;</a>
+                </p>
+                <nav>
+                    <ul id="footer-nav">
+                        <li>
+                            <span class="menuarrow"><a href="#">Mein JAKO-O</a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="menuarrow"><a href="#">Filialen</a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="menuarrow"><a href="#">Blätterkatalog + Katalog anfordern</a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="menuarrow"><a href="#">Rückgabebelehrung</a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="menuarrow"><a href="#">JAKO-O PC-Ansicht</a>
+                            </span>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="socialmedia">
+                    <li>
+                        <a href="#" class="icon-fb">
+                            <span class="hide">Facebook</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-g">
+                            <span class="hide">Google+</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-yt">
+                            <span class="hide">YouTube</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="icon-p">
+                            <span class="hide">Pinterest</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <section class="subfooter">
+            <ul class="metafooter">
+                <li><a href="#">Unsere AGBs</a>
+                </li>
+                <li><a href="#">Datenschutz</a>
+                </li>
+                <li><a href="#">Kontakt</a>
+                </li>
+                <li><a href="#">Impressum</a>
+                </li>
             </ul>
-        </nav>
-    </section>    
-    <section class="subfooter">
-        <p>© 2014 JAKO-O</p>
-    </section>
-</div>
-</body>
-</html>
+            <p>© 2014 JAKO-O</p>
+        </section>
+    </div>
+    <script src="js/jquery-1.10.1.min.js"></script>
+    <script src="js/idangerous.swiper-2.4.min.js"></script>
+    <script src="js/main.js"></script>
 
+</body>
+
+</html>
