--- a/pds.html
+++ b/pds.html
@@ -170,7 +170,7 @@
                         <p class="basic-price">1,98 € / 100 g</p>
                     </aside>
                     <section>
-                        <button type="submit" class="button large expand in-to-basket jsSubmitForm">In den Warenkorb</button>
+                    	<a href="warenkorb.html" class="button large expand in-to-basket jsSubmitForm">In den Warenkorb</a>
                         <button class="button expand in-to-leaflet">Auf den Merkzettel</button>
                     </section>
                     <section>
