--- a/pue.html
+++ b/pue.html
@@ -320,10 +320,10 @@
                 <li>
                     <a href="pds.html">
                         <div class="produkt-img">
-                            <img src="http://www.jako-o.de/medias/sys_master/h0c/ha2/8818927206430.jpg" alt="">
+                            <img src="media/8800019808286.jpg" alt="">
                         </div>
                         <div class="produkt-bezeichnung">
-                            <p>Baby-Langarmshirt Sprüche</p>
+                            <p>Kinder-Fleece-Jacke einzippbar VAUDE</p>
                             <div class="price">9,95 €</div>
                         </div>
                     </a>
