--- a/w1-01-login.html
+++ b/w1-01-login.html
@@ -163,7 +163,7 @@
                         <input type="email" placeholder="E-Mail-Adresse">
                         <input type="password" placeholder="Passwort">
                         <div class="buttonwrapper cf">
-                            <a href="#" class="button green expand next">Einloggen</a> 
+                            <a href="w2-zahlungsart.html" class="button green expand next">Einloggen</a> 
                         </div>
                     </div>
                     <div class="numberlogin">
