--- a/w2-zahlungsart.html
+++ b/w2-zahlungsart.html
@@ -74,7 +74,7 @@
                     <li>
                        <div class="paymentrow jspaymenttoggle">
                            <input type="radio" name="payment" id="p2">
-                            <label for="p2">Backeinzug</label>
+                            <label for="p2">Bankeinzug</label>
                        </div>
                         <div class="paymentcontent">
                             <label for="bic">BIC:</label>
@@ -108,7 +108,7 @@
                 </ul>
             </div>
             <div class="buttonwrappergreen cf">
-                <a href="#weiter" class="button green next expand">Weiter zur Zahlung</a>
+                <a href="w3_bestellung_abschicken.html" class="button green next expand">Weiter zur Zahlung</a>
             </div>
         </section>
         <section class="minifooter">
