--- a/pds.html
+++ b/pds.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link rel="stylesheet" href="css/idangerous.swiper.css">
+<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <!-- SWIPER CSS -->
     <meta name="description" content="JAKO-O Online-Shop: Kindermode, Babymode, Spielzeug und Kindermöbel - Kindersachen mit Köpfchen! ★ Tolle Produkte für Kinder ★ Top Qualität" />
     <style type="text/css">
