--- a/w3_bestellung_abschicken.html
+++ b/w3_bestellung_abschicken.html
@@ -7,6 +7,7 @@
     <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link rel="stylesheet" href="css/idangerous.swiper.css">
     <!-- SWIPER CSS -->
