--- a/warenkorb.html
+++ b/warenkorb.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
     <link rel="stylesheet" href="css/idangerous.swiper.css">          <!-- SWIPER CSS -->
     <meta name="description" content="JAKO-O Online-Shop: Kindermode, Babymode, Spielzeug und Kindermöbel - Kindersachen mit Köpfchen! ★ Tolle Produkte für Kinder ★ Top Qualität"/>
     <style type="text/css">@import "css/foundation.css";</style>
