--- a/w3_bestellung_abschicken.html
+++ b/w3_bestellung_abschicken.html
@@ -68,7 +68,7 @@
                 <div class="w3-row">
                     <div class="adress">
                         <strong>Rechnungsadresse:</strong>
-                        <br />Andre Bellmann
+                        <br />Max Mustermann
                         <br />Musterstraße
                         <br />99999 Musterstadt
                         <br />Deutschland
@@ -77,7 +77,7 @@
                     </div>
                     <div class="adress">
                         <strong>Lieferadresse:</strong>
-                        <br />Andre Bellmann
+                        <br />Max Mustermann
                         <br />Musterstraße
                         <br />99999 Musterstadt
                         <br />Deutschland
